--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,17 @@ dist.jlink.output=${dist.jlink.dir}/Voler
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\Librerias JAVA\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4.jar
+file.reference.ojdbc11.jar=E:\\Descargas\\ojdbc11.jar
 file.reference.ojdbc8.jar=C:\\Users\\Angelo\\Documents\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
