--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,10 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\Librerias JAVA\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\araya\\Downloads\\jcalendar-1.4.jar
 file.reference.ojdbc11.jar=E:\\Descargas\\ojdbc11.jar
 file.reference.ojdbc8.jar=C:\\Users\\Angelo\\Documents\\ojdbc8.jar
+file.reference.ojdbc8.jar-1=C:\\Users\\araya\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +48,9 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.ojdbc11.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.ojdbc8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,7 +86,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Voler
-main.class=Model.main
+main.class=View.JFUsuarios
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
