--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,7 +86,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Voler
-main.class=View.JFUsuarios
+main.class=View.JFLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
